--- a/wp-content/themes/fastio/sass/theme/_theme.scss
+++ b/wp-content/themes/fastio/sass/theme/_theme.scss
@@ -330,9 +330,6 @@ img.ondas{
 nav.navbar.fixed-top{
 	padding-top: 2.5rem;
 	padding-bottom: 0;
-	.container{
-		padding: 0;
-	}
 }
 
 // Home FullScreen Vídeo 
